// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown renders correctly snapshot driver should open menu on click if set 1`] = `
<DocumentFragment>
  <div
    class="dropdown-wrapper dropdown-story css-bbwnb8-container"
  >
    <span
      aria-live="polite"
      class="css-1laao21-a11yText"
    >
      <span
        id="aria-selection-event"
      >
         
      </span>
      <span
        id="aria-context"
      >
          option Ocean focused, 1 of 6. 6 results available. Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
      </span>
    </span>
    <div
      class=" css-quv8ei-control"
    >
      <div
        class=" css-1ht1nal-Component"
      >
        <div
          class=" css-1dtegfv-placeholder"
        />
        <div
          class="css-lkl2xd-Component"
        >
          <div
            class=""
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              aria-label="Dropdown input"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-27-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class=" css-1aqjfd-Component"
      >
        <span
          class=" css-ds71as-Component"
        />
        <div
          aria-hidden="true"
          class="dropdown-indicator css-1pxbrck-indicatorContainer"
        >
          <svg
            aria-hidden="false"
            class="icon_component icon_component--clickable"
            fill="currentColor"
            height="20px"
            role="button"
            tabindex="-1"
            viewBox="0 0 20 20"
            width="20px"
          >
            <path
              clip-rule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="menu dropdown-menu-wrapper css-1ysewv0-menu"
    >
      <div
        class=" css-bknh9q-Component"
      >
        <div
          class=" css-14cnnyc-option"
          id="react-select-27-option-0"
          tabindex="-1"
        >
          Ocean
        </div>
        <div
          class=" css-15bbhzv-option"
          id="react-select-27-option-1"
          tabindex="-1"
        >
          Blue
        </div>
        <div
          class=" css-4bbyqz-option"
          id="react-select-27-option-2"
          tabindex="-1"
        >
          Purple
        </div>
        <div
          class=" css-4bbyqz-option"
          id="react-select-27-option-3"
          tabindex="-1"
        >
          Red
        </div>
        <div
          class=" css-4bbyqz-option"
          id="react-select-27-option-4"
          tabindex="-1"
        >
          Orange
        </div>
        <div
          class=" css-4bbyqz-option"
          id="react-select-27-option-5"
          tabindex="-1"
        >
          Yellow
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown renders correctly snapshot driver should open menu on focus if set 1`] = `
<DocumentFragment>
  <div
    class="dropdown-wrapper dropdown-story css-bbwnb8-container"
  >
    <span
      aria-live="polite"
      class="css-1laao21-a11yText"
    >
      <span
        id="aria-selection-event"
      >
         
      </span>
      <span
        id="aria-context"
      >
           0 results available. Select is focused ,type to refine list, press Down to open the menu, 
      </span>
    </span>
    <div
      class=" css-quv8ei-control"
    >
      <div
        class=" css-1ht1nal-Component"
      >
        <div
          class=" css-1dtegfv-placeholder"
        />
        <div
          class="css-lkl2xd-Component"
        >
          <div
            class=""
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              aria-label="Dropdown input"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-26-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class=" css-1aqjfd-Component"
      >
        <span
          class=" css-ds71as-Component"
        />
        <div
          aria-hidden="true"
          class="dropdown-indicator css-slqvkp-indicatorContainer"
        >
          <svg
            aria-hidden="false"
            class="icon_component icon_component--clickable"
            fill="currentColor"
            height="20px"
            role="button"
            tabindex="-1"
            viewBox="0 0 20 20"
            width="20px"
          >
            <path
              clip-rule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown renders correctly snapshot driver should render correctly for the different sizes 1`] = `
<DocumentFragment>
  <div
    class="dropdown-wrapper dropdown-story css-1pu8kyc-container"
  >
    <div
      class=" css-veeint-control"
    >
      <div
        class=" css-18qqyiw-Component"
      >
        <div
          class=" css-1dtegfv-placeholder"
        />
        <div
          class="css-lkl2xd-Component"
        >
          <div
            class=""
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              aria-label="Dropdown input"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-19-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class=" css-col3eb-Component"
      >
        <span
          class=" css-ds71as-Component"
        />
        <div
          aria-hidden="true"
          class="dropdown-indicator css-prutdb-indicatorContainer"
        >
          <svg
            aria-hidden="false"
            class="icon_component icon_component--clickable"
            fill="currentColor"
            height="16px"
            role="button"
            tabindex="-1"
            viewBox="0 0 20 20"
            width="16px"
          >
            <path
              clip-rule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown renders correctly snapshot driver should render correctly for the different sizes 2`] = `
<DocumentFragment>
  <div
    class="dropdown-wrapper dropdown-story css-1pu8kyc-container"
  >
    <div
      class=" css-veeint-control"
    >
      <div
        class=" css-18qqyiw-Component"
      >
        <div
          class=" css-1dtegfv-placeholder"
        />
        <div
          class="css-lkl2xd-Component"
        >
          <div
            class=""
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              aria-label="Dropdown input"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-20-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class=" css-col3eb-Component"
      >
        <span
          class=" css-ds71as-Component"
        />
        <div
          aria-hidden="true"
          class="dropdown-indicator css-prutdb-indicatorContainer"
        >
          <svg
            aria-hidden="false"
            class="icon_component icon_component--clickable"
            fill="currentColor"
            height="16px"
            role="button"
            tabindex="-1"
            viewBox="0 0 20 20"
            width="16px"
          >
            <path
              clip-rule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown renders correctly snapshot driver should render correctly for the different sizes 3`] = `
<DocumentFragment>
  <div
    class="dropdown-wrapper dropdown-story css-1pu8kyc-container"
  >
    <div
      class=" css-veeint-control"
    >
      <div
        class=" css-18qqyiw-Component"
      >
        <div
          class=" css-1dtegfv-placeholder"
        />
        <div
          class="css-lkl2xd-Component"
        >
          <div
            class=""
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              aria-label="Dropdown input"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-21-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class=" css-col3eb-Component"
      >
        <span
          class=" css-ds71as-Component"
        />
        <div
          aria-hidden="true"
          class="dropdown-indicator css-prutdb-indicatorContainer"
        >
          <svg
            aria-hidden="false"
            class="icon_component icon_component--clickable"
            fill="currentColor"
            height="16px"
            role="button"
            tabindex="-1"
            viewBox="0 0 20 20"
            width="16px"
          >
            <path
              clip-rule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown renders correctly snapshot driver should render correctly for the different sizes 4`] = `
<DocumentFragment>
  <div
    class="dropdown-wrapper dropdown-story css-bbwnb8-container"
  >
    <div
      class=" css-132xx32-control"
    >
      <div
        class=" css-1ht1nal-Component"
      >
        <div
          class=" css-1dtegfv-placeholder"
        />
        <div
          class="css-lkl2xd-Component"
        >
          <div
            class=""
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              aria-label="Dropdown input"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-22-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class=" css-1aqjfd-Component"
      >
        <span
          class=" css-ds71as-Component"
        />
        <div
          aria-hidden="true"
          class="dropdown-indicator css-1ycu3uq-indicatorContainer"
        >
          <svg
            aria-hidden="false"
            class="icon_component icon_component--clickable"
            fill="currentColor"
            height="20px"
            role="button"
            tabindex="-1"
            viewBox="0 0 20 20"
            width="20px"
          >
            <path
              clip-rule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown renders correctly snapshot driver should render correctly for the different sizes 5`] = `
<DocumentFragment>
  <div
    class="dropdown-wrapper dropdown-story css-cmnsoe-container"
  >
    <div
      class=" css-ng27sg-control"
    >
      <div
        class=" css-rxqqti-Component"
      >
        <div
          class=" css-1dtegfv-placeholder"
        />
        <div
          class="css-lkl2xd-Component"
        >
          <div
            class=""
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              aria-label="Dropdown input"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-23-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class=" css-hsetqv-Component"
      >
        <span
          class=" css-ds71as-Component"
        />
        <div
          aria-hidden="true"
          class="dropdown-indicator css-1uglcx3-indicatorContainer"
        >
          <svg
            aria-hidden="false"
            class="icon_component icon_component--clickable"
            fill="currentColor"
            height="20px"
            role="button"
            tabindex="-1"
            viewBox="0 0 20 20"
            width="20px"
          >
            <path
              clip-rule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown renders correctly snapshot driver should render correctly with empty props 1`] = `
<DocumentFragment>
  <div
    class="dropdown-wrapper dropdown-story css-bbwnb8-container"
  >
    <div
      class=" css-132xx32-control"
    >
      <div
        class=" css-1ht1nal-Component"
      >
        <div
          class=" css-1dtegfv-placeholder"
        />
        <div
          class="css-lkl2xd-Component"
        >
          <div
            class=""
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              aria-label="Dropdown input"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-18-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class=" css-1aqjfd-Component"
      >
        <span
          class=" css-ds71as-Component"
        />
        <div
          aria-hidden="true"
          class="dropdown-indicator css-1ycu3uq-indicatorContainer"
        >
          <svg
            aria-hidden="false"
            class="icon_component icon_component--clickable"
            fill="currentColor"
            height="20px"
            role="button"
            tabindex="-1"
            viewBox="0 0 20 20"
            width="20px"
          >
            <path
              clip-rule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown renders correctly snapshot driver should use async if set 1`] = `
<DocumentFragment>
  <div
    class="dropdown-wrapper dropdown-story css-bbwnb8-container"
  >
    <span
      aria-live="polite"
      class="css-1laao21-a11yText"
    >
      <span
        id="aria-selection-event"
      >
         
      </span>
      <span
        id="aria-context"
      >
           0 results available. Select is focused ,type to refine list, press Down to open the menu, 
      </span>
    </span>
    <div
      class=" css-quv8ei-control"
    >
      <div
        class=" css-1ht1nal-Component"
      >
        <div
          class=" css-1dtegfv-placeholder"
        />
        <div
          class="css-lkl2xd-Component"
        >
          <div
            class=""
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              aria-label="Dropdown input"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-25-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class=" css-1aqjfd-Component"
      >
        <div
          aria-hidden="true"
          class=" css-1xh8qep-loadingIndicator"
        >
          <span
            class="css-imwzes-Component"
          />
          <span
            class="css-1ue98e-Component"
          />
          <span
            class="css-fwsb3e-Component"
          />
        </div>
        <span
          class=" css-ds71as-Component"
        />
        <div
          aria-hidden="true"
          class="dropdown-indicator css-slqvkp-indicatorContainer"
        >
          <svg
            aria-hidden="false"
            class="icon_component icon_component--clickable"
            fill="currentColor"
            height="20px"
            role="button"
            tabindex="-1"
            viewBox="0 0 20 20"
            width="20px"
          >
            <path
              clip-rule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown renders correctly snapshot driver should use virtualization if set 1`] = `
<DocumentFragment>
  <div
    class="dropdown-wrapper dropdown-story css-bbwnb8-container"
  >
    <span
      aria-live="polite"
      class="css-1laao21-a11yText"
    >
      <span
        id="aria-selection-event"
      >
         
      </span>
      <span
        id="aria-context"
      >
          option 1 focused, 1 of 10000. 10000 results available. Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
      </span>
    </span>
    <div
      class=" css-quv8ei-control"
    >
      <div
        class=" css-1ht1nal-Component"
      >
        <div
          class=" css-1dtegfv-placeholder"
        />
        <div
          class="css-lkl2xd-Component"
        >
          <div
            class=""
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              aria-label="Dropdown input"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-24-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class=" css-1aqjfd-Component"
      >
        <span
          class=" css-ds71as-Component"
        />
        <div
          aria-hidden="true"
          class="dropdown-indicator css-1pxbrck-indicatorContainer"
        >
          <svg
            aria-hidden="false"
            class="icon_component icon_component--clickable"
            fill="currentColor"
            height="20px"
            role="button"
            tabindex="-1"
            viewBox="0 0 20 20"
            width="20px"
          >
            <path
              clip-rule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="menu dropdown-menu-wrapper css-1ysewv0-menu"
    >
      <div
        class=""
        style="position: relative; height: 300px; overflow: auto; will-change: transform; direction: ltr; overflow-y: auto; box-sizing: border-box;"
      >
        <div
          style="height: 350008px; width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 4px; height: 35px; width: 100%;"
          >
            <div>
              <div
                class=" css-14cnnyc-option"
                id="react-select-24-option-0"
                tabindex="-1"
              >
                1
              </div>
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 39px; height: 35px; width: 100%;"
          >
            <div>
              <div
                class=" css-4bbyqz-option"
                id="react-select-24-option-1"
                tabindex="-1"
              >
                2
              </div>
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 74px; height: 35px; width: 100%;"
          >
            <div>
              <div
                class=" css-4bbyqz-option"
                id="react-select-24-option-2"
                tabindex="-1"
              >
                3
              </div>
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 109px; height: 35px; width: 100%;"
          >
            <div>
              <div
                class=" css-4bbyqz-option"
                id="react-select-24-option-3"
                tabindex="-1"
              >
                4
              </div>
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 144px; height: 35px; width: 100%;"
          >
            <div>
              <div
                class=" css-4bbyqz-option"
                id="react-select-24-option-4"
                tabindex="-1"
              >
                5
              </div>
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 179px; height: 35px; width: 100%;"
          >
            <div>
              <div
                class=" css-4bbyqz-option"
                id="react-select-24-option-5"
                tabindex="-1"
              >
                6
              </div>
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 214px; height: 35px; width: 100%;"
          >
            <div>
              <div
                class=" css-4bbyqz-option"
                id="react-select-24-option-6"
                tabindex="-1"
              >
                7
              </div>
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 249px; height: 35px; width: 100%;"
          >
            <div>
              <div
                class=" css-4bbyqz-option"
                id="react-select-24-option-7"
                tabindex="-1"
              >
                8
              </div>
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 284px; height: 35px; width: 100%;"
          >
            <div>
              <div
                class=" css-4bbyqz-option"
                id="react-select-24-option-8"
                tabindex="-1"
              >
                9
              </div>
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 319px; height: 35px; width: 100%;"
          >
            <div>
              <div
                class=" css-4bbyqz-option"
                id="react-select-24-option-9"
                tabindex="-1"
              >
                10
              </div>
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 354px; height: 35px; width: 100%;"
          >
            <div>
              <div
                class=" css-4bbyqz-option"
                id="react-select-24-option-10"
                tabindex="-1"
              >
                11
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown renders correctly when disabled 1`] = `
<div
  className="dropdown-wrapper css-1gsgnpy-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-ai89z2-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-fkye4g-Component"
    >
      <div
        className=" css-1dtegfv-placeholder"
      >
        
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={true}
            id="react-select-5-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-slt7ro-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={true}
          className="icon_component"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly when rtl 1`] = `
<div
  className="dropdown-wrapper css-b0xr5u-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-xu0d8l-Component"
    >
      <div
        className=" css-1dtegfv-placeholder"
      >
        
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-7-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with autoFocus 1`] = `
<div
  className="dropdown-wrapper css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ht1nal-Component"
    >
      <div
        className=" css-1dtegfv-placeholder"
      >
        
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-10-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with className 1`] = `
<div
  className="dropdown-wrapper test css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ht1nal-Component"
    >
      <div
        className=" css-1dtegfv-placeholder"
      >
        
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-3-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with defaultValue 1`] = `
<div
  className="dropdown-wrapper css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ht1nal-Component"
    >
      <div
        className=" css-1f92y5n-singleValue"
      >
        Ocean
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-17-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <div
        aria-hidden="true"
        className="clear-indicator css-11of1qg-Component"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with empty props 1`] = `
<div
  className="dropdown-wrapper css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ht1nal-Component"
    >
      <div
        className=" css-1dtegfv-placeholder"
      >
        
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-2-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with id 1`] = `
<div
  className="dropdown-wrapper css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ht1nal-Component"
    >
      <div
        className=" css-1dtegfv-placeholder"
      >
        
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-9-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with leftAvatar 1`] = `
<div
  className="dropdown-wrapper css-3iiiai-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-uqdx2p-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-11miohr-Component"
    >
      <div
        className="value-container"
      >
        <div
          className="value-container-chips without-placeholder"
          data-testid="value-container-chips"
        >
          <div
            className="chips chips--wrapper multiselect-chip-multi-line withClose noAnimation"
            data-testid="value-container-chip"
            id="ocean"
            onMouseDown={[Function]}
            style={
              Object {
                "backgroundColor": "var(--primary-selected-color)",
              }
            }
          >
            <div
              className="monday-style-avatar avatar left monday-style-avatar--large"
              style={
                Object {
                  "height": 16,
                  "width": 16,
                }
              }
            >
              <div
                aria-hidden={false}
                className="monday-style-avatar_circle monday-style-avatar_circle--img monday-style-avatar_circle--without-border"
                style={Object {}}
                tabIndex={0}
              >
                <img
                  className="monday-style-avatar-content_img monday-style-avatar-content_img--large"
                  src="person1.png"
                />
              </div>
            </div>
            <div
              className="label"
            >
              Ocean
            </div>
            <button
              aria-disabled={false}
              className="icon close monday-style-button monday-style-button--size-medium monday-style-button--kind-tertiary monday-style-button--color-on-primary-color monday-style-button--no-side-padding"
              data-testid="value-container-chip-close"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": "16px",
                  "justifyContent": "center",
                  "padding": 0,
                  "width": "16px",
                }
              }
              type="button"
            >
              <svg
                aria-hidden={true}
                className="icon_component icon-button-padding icon_component--no-focus-style"
                fill="currentColor"
                height="16"
                onClick={[Function]}
                viewBox="0 0 20 20"
                width="16"
              >
                <path
                  clipRule="evenodd"
                  d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </button>
          </div>
          <div
            className="css-lkl2xd-Component"
          >
            <div
              className=""
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                aria-label="Dropdown input"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-13-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "label": "input",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div />
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <div
        aria-hidden="true"
        className="clear-indicator css-11of1qg-Component"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with leftIcon 1`] = `
<div
  className="dropdown-wrapper css-3iiiai-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-uqdx2p-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-11miohr-Component"
    >
      <div
        className="value-container"
      >
        <div
          className="value-container-chips without-placeholder"
          data-testid="value-container-chips"
        >
          <div
            className="chips chips--wrapper multiselect-chip-multi-line withClose noAnimation"
            data-testid="value-container-chip"
            id="ocean"
            onMouseDown={[Function]}
            style={
              Object {
                "backgroundColor": "var(--primary-selected-color)",
              }
            }
          >
            <svg
              aria-hidden={true}
              className="icon_component icon left icon_component--no-focus-style"
              fill="currentColor"
              height="16"
              onClick={[Function]}
              viewBox="0 0 20 20"
              width="16"
            >
              <path
                clipRule="evenodd"
                d="M3 4.25C2.58579 4.25 2.25 4.58579 2.25 5V15C2.25 15.4142 2.58579 15.75 3 15.75H17C17.4142 15.75 17.75 15.4142 17.75 15V5C17.75 4.58579 17.4142 4.25 17 4.25H3ZM3.75 6.71589V14.25H16.25V6.71591L11.802 10.1371C11.2854 10.5346 10.6518 10.75 10 10.75C9.3482 10.75 8.71468 10.5346 8.19805 10.1371L3.75 6.71589ZM15.0455 5.75H4.95456L9.1126 8.94818L9.11265 8.94821C9.36706 9.14393 9.67903 9.25004 10 9.25004C10.321 9.25004 10.633 9.14393 10.8874 8.94821L10.8874 8.94818L15.0455 5.75Z"
                fill="currentColor"
                fillRule="evenodd"
              />
            </svg>
            <div
              className="label"
            >
              Ocean
            </div>
            <button
              aria-disabled={false}
              className="icon close monday-style-button monday-style-button--size-medium monday-style-button--kind-tertiary monday-style-button--color-on-primary-color monday-style-button--no-side-padding"
              data-testid="value-container-chip-close"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": "16px",
                  "justifyContent": "center",
                  "padding": 0,
                  "width": "16px",
                }
              }
              type="button"
            >
              <svg
                aria-hidden={true}
                className="icon_component icon-button-padding icon_component--no-focus-style"
                fill="currentColor"
                height="16"
                onClick={[Function]}
                viewBox="0 0 20 20"
                width="16"
              >
                <path
                  clipRule="evenodd"
                  d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </button>
          </div>
          <div
            className="css-lkl2xd-Component"
          >
            <div
              className=""
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                aria-label="Dropdown input"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-14-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "label": "input",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div />
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <div
        aria-hidden="true"
        className="clear-indicator css-11of1qg-Component"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with multi 1`] = `
<div
  className="dropdown-wrapper css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-yilbcx-Component"
    >
      <div
        className="value-container"
      >
        <div
          className="placeholder-container"
        >
          <div
            className=" css-1dtegfv-placeholder"
          >
            
          </div>
        </div>
        <div
          className="value-container-chips"
          data-testid="value-container-chips"
        >
          <div
            className="css-lkl2xd-Component"
          >
            <div
              className=""
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                aria-label="Dropdown input"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-11-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "label": "input",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div />
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with multiline 1`] = `
<div
  className="dropdown-wrapper css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ht1nal-Component"
    >
      <div
        className=" css-1dtegfv-placeholder"
      >
        
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-12-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with options 1`] = `
<div
  className="dropdown-wrapper css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ht1nal-Component"
    >
      <div
        className=" css-1dtegfv-placeholder"
      >
        
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-8-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with placeholder 1`] = `
<div
  className="dropdown-wrapper css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ht1nal-Component"
    >
      <div
        className=" css-1dtegfv-placeholder"
      >
        text
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-4-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with tabIndex 1`] = `
<div
  className="dropdown-wrapper css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ht1nal-Component"
    >
      <div
        className=" css-1dtegfv-placeholder"
      >
        
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-15-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex={9999}
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with value 1`] = `
<div
  className="dropdown-wrapper css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ht1nal-Component"
    >
      <div
        className=" css-1f92y5n-singleValue"
      >
        Ocean
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-16-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <div
        aria-hidden="true"
        className="clear-indicator css-11of1qg-Component"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly without clear button 1`] = `
<div
  className="dropdown-wrapper css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ht1nal-Component"
    >
      <div
        className=" css-1dtegfv-placeholder"
      >
        
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-6-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
